# TABAC

./: README.md  pyproject.toml
tabac/: PercolationModel.py  PercolationModelPatterns.py  abc_functors.py  cli.py  distances.py  experiments_auxiliary.py  experiments_auxiliary_torus.py  fluid.py  fluid_3000.pkl  fluid_3000_summaries.pkl  fluid_plot.py  helpers.py  perc.pkl  perc_summaries.pkl  run_experiments_fluid.py  run_experiments_fluid_summaries.py  run_experiments_percolation.py  run_experiments_percolation_summaries.py  run_experiments_sphere.py  run_experiments_sphere_summaries.py  run_experiments_torus.py  run_experiments_torus_summaries.py  run_experiments_vicsek.py  run_experiments_vicsek_summaries.py  run_model.py  shapes.py  sphere.pkl  sphere_summaries.pkl  torus.pkl  torus_summaries.pkl  vicsek.py  vicsek_10.pkl  vicsek_10_summaries.pkl  vicsek_5.pkl  vicsek_50.pkl  vicsek_50_summaries.pkl  vicsek_5_summaries.pkl  vicsek_distributions.py  vicsek_new.py
